--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was created Branko Daskijević. It uses data from mapbox.com and darksky.net.</p>
 
         <img class="portrait" src="/img/branko-me.png" alt="Branko">
     </div>
